<resources>
    <string name="app_name">GreenSpot</string>
    <string name="add_new_title">Add a new Green Spot</string>
    <string name="title">Title</string>
    <string name="location">Location</string>
    <string name="date">Date</string>
    <string name="edit_title">Edit the Green Spot</string>
    <string name="place">Place</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="close_the_image_viewer">Close the image viewer</string>
    <string name="show_the_image_in_large">Show the image in large</string>
</resources>